--- a/views/todo.ejs
+++ b/views/todo.ejs
@@ -14,7 +14,9 @@
     </head>
 
     <body>
-        <h1>Here's a general to-do list for a DevOps career roadmap:
+        <h1>Hello there!!
+        
+        Here's a general to-do list for a DevOps career roadmap:
 
 Learn the fundamentals of programming: If you haven't already, start learning at least one programming language. You should be able to write basic scripts, understand programming concepts and structures, and be comfortable working with data.
 
