--- a/views/todo.ejs
+++ b/views/todo.ejs
@@ -14,35 +14,7 @@
     </head>
 
     <body>
-        <h1>Hello there!!
-        
-        Here's a general to-do list for a DevOps career roadmap:
-
-Learn the fundamentals of programming: If you haven't already, start learning at least one programming language. You should be able to write basic scripts, understand programming concepts and structures, and be comfortable working with data.
-
-Gain expertise in at least one scripting language: DevOps professionals typically use scripting languages such as Python, Bash, Ruby, and PowerShell. Pick one and become proficient with it.
-
-Learn about operating systems: You should have a good understanding of how operating systems work, including how they manage memory, handle files, and interact with hardware.
-
-Get comfortable with the command line: You should be able to navigate and work effectively with command-line interfaces.
-
-Learn about source control: Learn Git or other source control tools like SVN to manage code effectively.
-
-Gain knowledge of containerization technologies: Containerization has become a crucial part of modern DevOps practice, so it's essential to gain experience with containerization technologies like Docker.
-
-Learn about infrastructure as code: Infrastructure as code (IaC) allows you to automate the creation, deployment, and management of infrastructure. Gain knowledge of tools like Terraform, CloudFormation.
-
-Familiarize yourself with cloud platforms: It's important to understand how cloud platforms such as AWS, Azure, and GCP work, how to deploy applications on them and how to monitor them.
-
-Learn about CI/CD tools: Continuous integration/continuous deployment (CI/CD) is an essential part of DevOps practice. Familiarize yourself with tools like Jenkins, Travis CI, CircleCI.
-
-Gain experience in monitoring and logging: Monitoring and logging are crucial for maintaining the health of your infrastructure. Learn about tools like Prometheus, Grafana, and ELK stack.
-
-Develop soft skills: DevOps involves working closely with multiple teams. To be successful, you must have excellent communication skills and be comfortable working in a fast-paced environment.
-
-Stay updated with the latest trends: DevOps is a rapidly evolving field, and staying updated with the latest trends and technologies is essential. Attend conferences, read blogs and participate in online communities.
-
-Remember, this list is just a starting point. DevOps is a broad field, and you will need to specialize in a specific area to advance your career. Good luck!</h1>
+        <h1>It was a great DevOps project!</h1>
         <ul>
             <% todolist.forEach(function(todo, index) { %>
             <li>
