--- a/views/todo.ejs
+++ b/views/todo.ejs
@@ -14,7 +14,7 @@
     </head>
 
     <body>
-        <h1>It was a great DevOps project!</h1>
+        <h1>Welecome to next gen to do list! </h1>
         <ul>
             <% todolist.forEach(function(todo, index) { %>
             <li>
