--- a/views/todo.ejs
+++ b/views/todo.ejs
@@ -14,7 +14,7 @@
     </head>
 
     <body>
-        <h1>Welecome to next gen to do list! List your items! </h1>
+        <h1>Ahlan Sahlan Mahe Ramadan, What are you planning to do in Ramadan? </h1>
         <ul>
             <% todolist.forEach(function(todo, index) { %>
             <li>
