--- a/views/todo.ejs
+++ b/views/todo.ejs
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Quran Reading Website</title>
+	<title>Quran Reading Website!</title>
 </head>
 <body>
 	<header>
